--- a/bootstrap/build.gradle
+++ b/bootstrap/build.gradle
@@ -18,6 +18,11 @@ repositories {
     }
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
 dependencies {
     compileOnly fileTree(dir: "../libs/", include: "patched_*.jar")
     implementation "org.ow2.asm:asm-tree:6.2"
@@ -26,7 +31,7 @@ dependencies {
     implementation "org.spongepowered:mixin:0.8.2"
     implementation 'org.apache.logging.log4j:log4j-api:2.14.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
-    implementation ("net.minecraft:launchwrapper:1.12") {
+    implementation("net.minecraft:launchwrapper:1.12") {
         exclude group: "net.sf.jopt-simple"
         exclude group: "org.apache.logging.log4j"
     }
