依存関係のバージョンを更新

--- a/bootstrap/build.gradle
+++ b/bootstrap/build.gradle
@@ -25,9 +25,9 @@ java {
 
 dependencies {
     compileOnly fileTree(dir: "../libs/", include: "patched_*.jar")
-    implementation "org.ow2.asm:asm-tree:6.2"
-    implementation "org.ow2.asm:asm-commons:6.2"
-    implementation "org.ow2.asm:asm-util:6.2"
+    implementation 'org.ow2.asm:asm-tree:9.2'
+    implementation 'org.ow2.asm:asm-commons:9.2'
+    implementation 'org.ow2.asm:asm-util:9.2'
     implementation "org.spongepowered:mixin:0.8.2"
     implementation 'org.apache.logging.log4j:log4j-api:2.14.1'
     implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
