設定共通化

--- a/build.gradle
+++ b/build.gradle
@@ -7,3 +7,13 @@ repositories {
 
 dependencies {
 }
+
+subprojects {
+    apply plugin: 'java'
+
+    group this.group
+    version this.version
+
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
