--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,24 +1,38 @@
+plugins {
+    id "com.github.johnrengelman.shadow" version "6.1.0"
+}
+
 jar {
-    baseName "${rootProject.name}-plugin"
+    baseName "${rootProject.name}"
 }
 
 repositories {
     mavenCentral()
     maven {
-        name = 'papermc-repo'
-        url = 'https://papermc.io/repo/repository/maven-public/'
+        name = "papermc-repo"
+        url = "https://papermc.io/repo/repository/maven-public/"
     }
     maven {
-        name = 'sonatype'
-        url = 'https://oss.sonatype.org/content/groups/public/'
+        name = "sonatype"
+        url = "https://oss.sonatype.org/content/groups/public/"
     }
 }
 
 dependencies {
-    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
+    compileOnly "com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT"
 }
 
-task copyToServer(type: Copy) {
-    from new File(buildDir.absolutePath, "libs/${rootProject.name}-plugin-${version}.jar")
+shadowJar {
+    exclude "META-INF/*"
+    archiveFileName = "${rootProject.name}-${version}.jar"
+}
+
+task copyBuildToServer(type: Copy) {
+    mustRunAfter shadowJar
+    from new File(buildDir.absolutePath, "libs/${rootProject.name}-${version}.jar")
     into "../server/plugins"
+}
+
+task buildServer {
+    dependsOn shadowJar, copyBuildToServer
 }
