--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,7 @@ task generatePatchedJar(group: "setup") {
     try {
         Runtime runtime = Runtime.getRuntime()
         Process p = runtime.exec("java -jar " + serverJar.toPath().toAbsolutePath().toString() + " nogui", new String[0], tmpDir)
-        while (!tmpPatchedJar.exists()) {
-        }
+        p.waitFor()
         p.destroy()
     } catch (Exception e) {
         e.printStackTrace()
